[package]
name = "ethtool"
version = "0.1.0"
authors = ["Matthew Slipper <me@matthewslipper.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
rust-crypto = "0.2.36"
hex = "0.3.2"
failure = "0.1.5"
num-bigint = "0.2"
rust_decimal = "1.0.1"
secp256k1 = { version = "0.12.2", features = ["rand"] }
rand = "0.4.6"